# DonutBuffer

./: .cursorrules  .gitignore  BufferRunner  CMakeLists.txt  Dockerfile  DonutBufferApp  GITHUB_ACTIONS_SETUP.md  GITHUB_INTEGRATION.md  GTEST_INTEGRATION.md  MCP_README.md  Makefile  README.md  TESTING.md  TEST_DESCRIPTIONS_SUMMARY.md  ambient-agent  capacity_demo  check-cicd  check_cicd.py  cmake_vs_gmake_и_ctest_vs_gtest.md  comparison_example.cpp  factorial_demo  imgui.ini  interview_vector  mcp_test_report.json  my_vector  remove_even  requirements.txt  run-tests.sh  run-wizard  size_demo  start-mcp  start_mcp_server.py  test  test-ambient  test-full-ambient  wizard
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: README.md  ci.yml  manual-ci.yml  manual-fail.yml  quick-test.yml  quick-tests.yml  test.yml  tests.yml
codebase/: Makefile  ring_buffer.cpp
github_mcp_server/: README.md  __init__.py  core.py  dependencies.py  donut_ai_wizard.py  env_manager.py  github_setup.py  integration_test.py  mcp_setup.py  wizard.py
github_mcp_server/ambient/: README.md  __init__.py  agent_injector.py  ambient_agent.py  event_handlers.py  event_system.py  github_monitor.py  interactive_curses.py  interactive_simple.py  prompt_generator.py  pty_bridge.py  textual_ui.py
github_mcp_server/config/: mcp_config.json
github_mcp_server/src/ambient/: agent_injector.py  ambient_agent.py  event_handlers.py  event_system.py  github_monitor.py  prompt_generator.py
github_mcp_server/src/core/: base.py  cursor_client.py  dependencies.py  dependency_checker.py  env.py  env_manager.py
github_mcp_server/src/setup/: github_setup.py  mcp_setup.py
github_mcp_server/src/ui/: __init__.py  agent_stream.py  constants.py  interactive_runner.py  interactive_simple.py  message_bus.py  prompt_ui.py  rich_wizard.py
github_mcp_server/tests/integration/: test_integration.py
github_mcp_server/tests/preflight/: check_ambient.py  check_ambient_agent.py  check_ambient_events.py  check_dependencies.py  check_github.py  check_mcp.py  runner.py  test_integration.py
glad/include/glad/: glad.h
glad/src/: glad.c
mcp/: docker_utils.py  llm.py  main.py  recognizer.py  requirements.txt  tasks.py
mcp/providers/: __init__.py  ollama_provider.py  openai_provider.py  provider_base.py
src/: abstract_ring_buffer.h  application.cpp  application.h  application.ixx  args.cpp  args.h  args.ixx  buffer_runner.cpp  concurrentqueue_adapter.h  flags.cpp  flags.h  flags.ixx  gui.cpp  gui.h  gui_thread.cpp  iring_buffer.h  main.cpp  performance_history.cpp  performance_history.h  performance_history.ixx  ring_buffer.cpp  ring_buffer.h  ring_buffer_adapter.h  ring_buffer_config.h  simulation_manager.cpp  simulation_manager.h  simulation_manager.ixx
src/experiments/: capacity_demo.cpp  concurrent_vs_lockfree_experiment.cpp  concurrent_vs_lockfree_experiment.h  concurrent_vs_lockfree_experiment.ixx  experiment_base.cpp  experiment_base.h  experiment_base.ixx  factorial_template.cpp  interview_vector.cpp  main.cpp  mutex_vs_lockfree_experiment.cpp  mutex_vs_lockfree_experiment.h  mutex_vs_lockfree_experiment.ixx  my_vector.cpp  remove_even_numbers.cpp  size_understanding.cpp
src/gui/: gui.cpp  gui.h  gui.ixx  gui_thread.cpp  gui_thread.h  gui_thread.ixx
src/ringbuffer/: abstract_ring_buffer.ixx  concurrentqueue_adapter.h  concurrentqueue_adapter.ixx  lockfree_ring_buffer.cpp  lockfree_ring_buffer.h  lockfree_ring_buffer_adapter.h  lockfree_ring_buffer_adapter.ixx  mutex_ring_buffer.cpp  mutex_ring_buffer.h  mutex_ring_buffer_adapter.h  mutex_ring_buffer_adapter.ixx  ring_buffer_adapter.h
tests/: CMakeLists.txt  README.md  e2e_buffer_tests.cpp  ringbuffer_concurrent_tests.cpp  ringbuffer_performance_tests.cpp  ringbuffer_tests.cpp  smart_ringbuffer_test.cpp
tests/smart_gtest/: EXAMPLES_REFACTOR.md  MEMORY_GUIDE.md  PROMPT_LIMITS_GUIDE.md  README.md  SMART_SQL_IMPLEMENTATION.md  ai_test_planner.py  docker-compose.yml  env_example.txt  init.sql  requirements.txt  simple_smart_gtest.cpp  simple_smart_gtest.h  test_agent.py  test_integration.py
tests/smart_gtest/core/: __init__.py  examples.py  executor.py  graph_builder.py  graph_state.py  memory_setup.py  planner.py  tools_setup.py
tests/smart_gtest/tools/: __init__.py  chat_tool.py  join_tool.py  llm_format_tool.py  openai_config.py  shell_tool.py  sql_tool.py  user_task.py
